# FreeMat

FreeMat/: BuildInstructions.txt  CMakeLists.txt  COPYING  Makefile.am  Makefile.in  README.TXT  acinclude.m4  aclocal.m4  configure  configure.in
FreeMat/MFiles/: clusterboot.m  copper.m  fliplr.m  length.m  popdir.m  rcall.m  rescan.m  rserver.m  sqrt.m  std.m
FreeMat/dependencies/: CMakeLists.txt
FreeMat/doc/: Doxyfile  Doxyfile.in
FreeMat/extlibs/: Makefile.am  Makefile.in  config.status
FreeMat/help/: maketxt.sh  modules.txt
FreeMat/libs/: Makefile.am  Makefile.in
FreeMat/manual/: abs.tex  accept.tex  acosplot.eps  asinplot.eps  atan2plot.eps  atanplot.eps  axis.tex  axis1.eps  axis2.eps  axis3.eps  axis4.eps  clear.tex  closeimage.tex  closeplot.tex  colormap1.eps  colormap2.eps  colormap3.eps  colormap4.eps  colormap5.eps  colormap7.eps  connect.tex  cos.tex  cosplot.eps  cot.tex  cotplot.eps  cscplot.eps  dottimes.tex  e.tex  exp.tex  expplot1.eps  expplot2.eps  fclose.tex  feof.tex  fft1.eps  fft2.eps  find.tex  fopen.tex  fprintf.tex  fread.tex  fscanf.tex  (+72 more)
FreeMat/mpi/: CLIThread.cpp  KernelMainMPI.cpp  MPIWrap.cpp  MPIWrap.hpp  Makefile.am  Makefile.in
FreeMat/native/: Color.hpp  GraphicsContext.hpp  GrayscaleGC.hpp  GrayscaleImage.hpp  Makefile  Point2D.cpp  Point2D.hpp  PostScriptGC.cpp  PostScriptGC.hpp  RGBImage.cpp  RGBImage.hpp  RGBImageGC.cpp  RGBImageGC.hpp  Rect.hpp  Rect2D.cpp  Rect2D.hpp  bld  build_font_tables.c  builft.c  doc.txt  drawlib.c  drawlib2.c  renderft.cpp  swiss.12  testmain.cpp
FreeMat/src/: App.cpp  App.hpp  AppNoGUI.cpp  CLIBuffer.cpp  CLIBuffer.hpp  CLITextCtrl.cpp  CLITextCtrl.hpp  CLIThread.cpp  CLIThread.hpp  CMakeLists.txt  FreeMat.qrc  FreeMatErrorHandler.cpp  FreeMatErrorHandler.hpp  FreeMatGUI.exe.stackdump  GUIInterface.cpp  GUIInterface.hpp  KernelMain.cpp  LeftHandSide.cpp  LeftHandSide.hpp  Loader.cpp  MainApp.cpp  MainApp.hpp  Makefile.am  Makefile.in  PathSearcher.cpp  PathSearcher.hpp  SessionFrame.cpp  SessionFrame.hpp  Shell.cpp  Shell.hpp  TeclaInterface.cpp  TeclaInterface.hpp  application.cpp  application.hpp  main.cpp  notes.txt  wxCLI.cpp  wxCLI.hpp  wxCLI2.cpp  wxCLI2.hpp
FreeMat/tests/: CMakeLists.txt
FreeMat/tools/: Doxyfile  Info.plist  blas.ini  extract_fragments.py  helpgen.py  mergefragments.py  mergemfiles.py  release_linux.sh  release_win32.sh  siggen.py
FreeMat2/: AUTHORS  BuildInstructions.txt  CMakeLists.txt  COPYING  ChangeLog  FreeMat.dsp  FreeMat.dsw  FreeMat.pro  FreeMat.qc  FreeMat.qrc  FreeMat.sln  FreeMat.vcproj  Makefile.am  Makefile.in  Manifest  NEWS  NOTES.TXT  README  SConstruct  acinclude.m4  aclocal.m4  bootstrap  builddeps.in  configh.in  configure  configure.in  freemat.spec  freemat_nsi.in  make_mac_bundle  make_release  makehelp  makepkg.in  makerelease  mkdist  todo.txt
FreeMat2/MFiles/: Makefile.am  Makefile.in  acosd.m  acotd.m  acoth.m  acscd.m  all.m  all.mpp  angle.m  any.m  any.mpp  asecd.m  asinh.m  atanh.m  axis.m  bin2dec.m  bin2dec.mpp  bind.m  bind.mpp  bitand.m  bitor.m  bitxor.m  cellstr.m  char.m  circshift.m  circshift.mpp  cla.m  clf.m  clim.m  colorbar.m  colormap.m  conv.m  conv.mpp  copper.m  copper.mpp  cosd.m  cotd.m  cross.m  cscd.m  csch.m  (+178 more)
FreeMat2/autom4te-2.53.cache/: output.0  traces.0
FreeMat2/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
FreeMat2/cmake/: FindAMD.cmake  FindARPACK.cmake  FindAVCALL.cmake  FindBLAS.cmake  FindFFTW.cmake  FindFFTWF.cmake  FindFORTRANLIB.cmake  FindLAPACK.cmake  FindMATIO.cmake  FindUMFPACK.cmake  FindZ.cmake  FindZMATIO.cmake
FreeMat2/doc/: FLPort.txt
FreeMat2/help/: Index.hhk  Index_template.hhk  Makefile.am  Makefile.in  bldindex.pl  bldmakefiles.pl  dcptrans.pl  freemat.chm  freemat.hhp  index.hhk  main.tex  makehelp  master.txt  mkhsetpath.m  mppstrip.pl  mpptrans.pl  section_descriptors.txt  toc.hhc  toc_template.hhc
FreeMat2/images/: Makefile.am
FreeMat2/libs/: CMakeLists.txt  Makefile.am  Makefile.in  SConscript  libs.pro
FreeMat2/manual/: Doxyfile  Doxyfile.in  Makefile  acos.tex  asin.tex  atan.tex  atan2.tex  cd.tex  colon.tex  colormap.tex  comparisonops.tex  complex.tex  conj.tex  csc.tex  dcomplex.tex  dotleftdivide.tex  dotpower.tex  dotrightdivide.tex  double.tex  fft.tex  float.tex  fseek.tex  ftell.tex  getprintlimit.tex  hermitian.tex  ij.tex  imag.tex  image.tex  int16.tex  int32.tex  int8.tex  log.tex  makefigs.m  manual.hhc  manual.hhp  manual.toc  matdivide.tex  matleftdivide.tex  matmultiply.tex  matrightdivide.tex  (+25 more)
FreeMat2/mpi/: AppNoGUI.cpp  AppNoGUI.hpp  CLIThread.hpp  MPIWrap.hpp  Makefile  Makefile.in
FreeMat2/native/: .gdb_history  BitmapFont.cpp  BitmapFont.hpp  Color.cpp  GraphicsContext.cpp  GraphicsContext.hpp  GrayImageGC.hpp  GrayscaleImage.hpp  KeyManager.hpp  Makefile  PostScriptGC.cpp  PostScriptGC.hpp  RGBImage.hpp  RGBImageGC.hpp  X_graphics.c  build_font_table2.c  build_font_tables  build_font_tables.c  carpet.m  diag.eps  diag.ppm  diag.tif  diag.tiff  diag_data.eps  doc.txt  dprnt.cpp  drawlib  drawlib2  dump.pgm  dump.ppm  getweb  ktrace.out  pargs.m  putweb  renderft  renderft.c  rng.cpp  surface.m  swiss.12_arial  testGC  (+1 more)
FreeMat2/qconf/: amd.qcm  arpack.qcm  avcall.qcm  blas.qcm  fftw.qcm  gfortran.qcm  lapack.qcm  matio.qcm  qt41.qcm  umfpack.qcm
FreeMat2/src/: .gdb_history  CMakeLists.txt  Common.cpp  Common.hpp  DumbTerminal.cpp  DumbTerminal.hpp  Editor.cpp  Editor.hpp  FileTool.cpp  FileTool.hpp  FreeMat.qrc  FuncTerminal.cpp  FuncTerminal.hpp  HistoryWidget.cpp  HistoryWidget.hpp  InterpreterThread.cpp  InterpreterThread.hpp  MainApp.cpp  MainApp.hpp  Makefile.am  Makefile.in  PathTool.cpp  PathTool.hpp  SConscript  SocketCB.cpp  SocketCB.hpp  Terminal.cpp  Terminal.hpp  ToolDock.cpp  ToolDock.hpp  VariablesTool.cpp  VariablesTool.hpp  WalkThread.cpp  WalkThread.hpp  appIcon.icns  application.cpp  application.h  application.hpp  auxfunc.m  cosplot.eps  (+32 more)
FreeMat2/toolbox/: acosh.m  acsc.m  asind.m  axis.m  bin2dec.m  clf.m  cosh.m  deblank.m  dec2bin.m  fftshift.m  gray.m  idiv.m  image.m  inline_evaluate.m  install.m  (+19 more)
(+13340 files in other folders)
